# rl_tests

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  poetry.toml  pyproject.toml
Dynamic_Programming/Jack_Car_Rental/: nonlineal.py
K_Armed_Bandit/: __init__.py  bandit.py  kbandit_problem.py  main.py
TD Learning/GridWorld/: algorithm.py  requirements.txt
TD_Learning/Double_Learning/: main.py
TD_Learning/GridWorld/: algorithm.py  game.py  game_config.py
TD_Learning/Random_Walk/: main.py
Tabular_Methods/dyna_maze/classes/: agent.py  game.py  maze.py  player.py
Tabular_Methods/dyna_maze/config/: config.py  logger.py
Tabular_Methods/dyna_maze/functions/: algorithm.py  training.py  utils.py
chapter_02/exercise_03/: __init__.py  main.py  requirements.txt
chapter_02/exercise_03/classes/: bandit.py  problem.py
chapter_02/exercise_03/config/: config.py  logger.py
chapter_02/exercise_03/functions/: execute.py  utils.py
chapter_02/section_03/: main.py
chapter_02/section_03/classes/: bandit.py  problem.py
chapter_02/section_03/config/: config.py
chapter_04/example_02/: main.py  requirements.txt
chapter_04/example_03/: main.py
chapter_04/excercise_07/: main.py
chapter_06/example_02/: main.py
chapter_06/example_05/: README.md  __init__.py  algorithm.py  game.py  game_config.py  requirements.txt
chapter_06/example_07/: main.py
dynamic_programming/JackCarRental/: lineal.py
k_armed_bandit/: kbandit_problem.py  main.py
k_armed_bandit/functions/: execute.py
src/: main.py  requirements.txt
tabular_methods/dyna_maze/: main.py
(+110 files in other folders)
